{Practice-4} added right column, top column, bage at the botom
JavaScript: adding/removing/deleting pizza, registration form

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -6,29 +6,68 @@
 
     <!-- Bootsrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="cosmetic.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
 
     <!-- LESS основний файл -->
-    <link rel="stylesheet/less" type="text/css" href="assets/less/main.less" />
+    <link rel="stylesheet/less" type="text/less" href="assets/less/pizza/pizza-card.less" />
+    <link rel = "stylesheet/less" type = "text/less" href="assets/less/main.less" />
     <!-- LESS JavaScript компілятор -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
+    <script src="basic.js"></script>
 
 
 </head>
 <body>
 <div id="cart"></div>
 <div class="container">
+    <div class = "hideoutmenu">
+        <div class="PKMA">
+            <span>PIZZA <br/> KMA</span>
+        </div>
+        <img class = "PizzaCorner" src="assets/images/discount.svg">
+        <div class = hideoutFirst>
+            <span style = "font-size: 30px">(044)666 6 666</span>
+            <span style = "font-size: 15px; margin-left: 3%">24 години / 7 днів на тиждень</span>
+            <span style = "font-size: 20px; margin-left: 3%">Безкоштовна доставка</span>
+            <button class = "btn btn-primary " id="login" style="margin-left: 4%; margin-bottom: 5px">Увійти</button>
+            <span class = "userID">dddd</span>
+        </div>
+    </div>
+    <div class = "discount-msg">
+        <p class = "msg-top">ЦЬОГО <br/> ТИЖНЯ <br/> НА ВСЕ</p>
+        <span class = "discount-num">-20%</span>
+        <img class = "discount-corner" src="assets/images/discount.svg">
+    </div>
     <div class="row" id="pizza_list">
+        <div class = "col-12 col-md-10">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_1.jpg">
 
-                <div class="caption"><h3>Thumbnail label</h3>
+                <div class="caption"><h3 class = "name">Техас</h3>
 
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p class = "descript">М'ясна піца</p>
 
+                    <p>Інгрідієнти</p>
                     <p>
-                        <a href="#" class="btn btn-primary">Button 2</a>
-                        <a href="#" class="btn btn-default">Button 1</a>
+                        <span class = "smallSize"><img src="assets/images/size-icon.svg"> 30</span>
+                        <span class = "largeSize largeParam"><img src="assets/images/size-icon.svg"> 40</span>
+                    </p>
+                    <p>
+                        <span class = "smallWeight"><img src="assets/images/weight.svg"> 370</span>
+                        <span class = "largeWeight largeParam"><img src="assets/images/weight.svg"> 660</span>
+                    </p>
+                    <p>
+                        <span class = "price smallPrice">120</span>
+                        грн
+                        <span class = "price largePrice largeParam">160</span>
+                        <span class = "largeParam uah">грн</span>
+                    </p>
+                    <p>
+                        <a href="#" class="btn btn-primary smallButton">Купити</a>
+                        <a href="#" class="btn btn-primary largeButton largeParam">Купити</a>
                     </p>
                 </div>
             </div>
@@ -38,13 +77,27 @@
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_2.jpg">
 
-                <div class="caption"><h3>Thumbnail label</h3>
+                <div class="caption"><h3 class = "name">Маргарита</h3>
+                    <p class = "descript">М'ясна піца</p>
 
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-
+                    <p>Інгрідієнти</p>
                     <p>
-                        <a href="#" class="btn btn-primary">Button 3</a>
-                        <a href="#" class="btn btn-default">Button 4</a>
+                        <span class = "smallSize"><img src="assets/images/size-icon.svg"> 30</span>
+                        <span class = "largeSize largeParam"><img src="assets/images/size-icon.svg"> 40</span>
+                    </p>
+                    <p>
+                        <span class = "smallWeight"><img src="assets/images/weight.svg"> 370</span>
+                        <span class = "largeWeight largeParam"><img src="assets/images/weight.svg"> 660</span>
+                    </p>
+                    <p>
+                        <span class = "price smallPrice">120</span>
+                        грн
+                        <span class = "price largePrice largeParam">160</span>
+                        <span class = "largeParam uah">грн</span>
+                    </p>
+                    <p>
+                        <a href="#" class="btn btn-primary smallButton">Купити</a>
+                        <a href="#" class="btn btn-primary largeButton largeParam">Купити</a>
                     </p>
                 </div>
             </div>
@@ -54,15 +107,98 @@
             <div class="thumbnail pizza-card">
                 <img src="assets/images/pizza_3.jpg">
 
-                <div class="caption"><h3>Thumbnail label</h3>
-
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-
+                <div class="caption"><h3 class = "name">Томатна</h3>
+                    <p class = "descript">М'ясна піца</p>
+                    <p>Інгрідієнти</p>
                     <p>
-                        <a href="#" class="btn btn-primary">Button 5</a>
-                        <a href="#" class="btn btn-default">Button 6</a>
+                        <span class = "smallSize"><img src="assets/images/size-icon.svg"> 30</span>
+                        <span class = "largeSize largeParam"><img src="assets/images/size-icon.svg"> 40</span>
+                    </p>
+                    <p>
+                        <span class = "smallWeight"><img src="assets/images/weight.svg"> 370</span>
+                        <span class = "largeWeight largeParam"><img src="assets/images/weight.svg"> 660</span>
+                    </p>
+                    <p>
+                        <span class = "price smallPrice">120</span>
+                        грн
+                        <span class = "price largePrice largeParam">160</span>
+                        <span class = "largeParam uah">грн</span>
+                    </p>
+                    <p>
+                        <a href="#" class="btn btn-primary smallButton">Купити</a>
+                        <a href="#" class="btn btn-primary largeButton largeParam">Купити</a>
                     </p>
                 </div>
+            </div>
+        </div>
+    </div>
+        <div class = "col-12 col md-2">
+            <div class = "order">
+                <span class = ordername">Замовлення</span>
+                <button class = "ordercircle"> 3 </button>
+                <button class = "clear">Очистити замовлення</button>
+            </div>
+            <div class = "withSmth">
+                <p class = rname>Техас(Мала)</p>
+                <p>
+                    <span class = "rstats rsize"><img src="assets/images/size-icon.svg"> 30</span>
+                    <span class = "rstats rweight"><img src="assets/images/weight.svg"> 370</span>
+                </p>
+                <span class="rprice">120</span>
+                грн
+                <button class = minus>-</button>
+                <input class = inp value = "1">
+                <button class = "plus">+</button>
+                <button class = "remove">X</button>
+            </div>
+            <div class = "withSmth">
+                <p class = rname>Маргарита(Мала)</p>
+                <p>
+                    <span class = "rstats rsize"><img src="assets/images/size-icon.svg"> 30</span>
+                    <span class = "rstats rweigh"><img src="assets/images/weight.svg"> 370</span>
+                </p>
+                <span class="rprice">120</span>
+                грн
+                <button class = minus>-</button>
+                <input class = inp value = "1">
+                <button class = "plus">+</button>
+                <button class = "remove">X</button>
+            </div>
+            <div class = "withSmth">
+                <p class = rname>Томатна(Мала)</p>
+                <p>
+                    <span class = "rstats rsize"><img src="assets/images/size-icon.svg"> 30</span>
+                    <span class = "rstats rweigh"><img src="assets/images/weight.svg"> 370</span>
+                </p>
+                <span class="rprice" >120</span>
+                грн
+                <button class = minus>-</button>
+                <input class = inp value = "1">
+                <button class = "plus">+</button>
+                <button class = "remove">X</button>
+            </div>
+            <div id = "toBeCloned" class = withSmth>
+                <p class = rname></p>
+                <p>
+                    <img style="margin-left: 10px" src="assets/images/size-icon.svg">
+                    <span class = "rstats rsize" style="margin-left:0px"></span>
+                    <img style="margin-left: 2%" src="assets/images/weight.svg">
+                    <span class = "rstats rweight" style="margin-left:0px"></span>
+                </p>
+                <span class="rprice" ></span>
+                грн
+                <button class = minus>-</button>
+                <input class = inp value = "1">
+                <button class = "plus">+</button>
+                <button class = "remove">X</button>
+            </div>
+            <div class = "summary">
+                <p>
+                    Сума Замовлення
+                    <span id="sumPrice">360</span>
+                    грн
+                </p>
+                <button class = "btn btn-primary btn-final">Замовити</button>
             </div>
         </div>
     </div>
